# CredX-AI

./: .gitignore  CONTRIBUTING.md  README.md  README_RESUME_PARSER.md  matching_engine.py  pyproject.toml  rank_api.py  requirements.txt
.github/: CODE_OF_CONDUCT.md
.github/   ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: ranking_weights.json
data/: candidates.json
frontend/public/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: RankingDemo.jsx
src/credx_ai/: app.py  matching_engine.py  resume_parser.py  skills_scorer.py
src/credx_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/credx_ai/static/: script.js  style.css
src/credx_ai/templates/: index.html
static/: script.js  style.css
templates/: index.html
tests/: conftest.py  test_matching_engine.py  test_resume_parser.py  test_resume_parser_simple.py
